# maketest

testmake1/: CMakeLists.txt  main.cpp
testmake2/: CMakeLists.txt
testmake2/dlls/: CMakeLists.txt
testmake2/dlls/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
testmake2/exes/: CMakeLists.txt
testmake2/exes/exe1/: CMakeLists.txt  main1.cpp
testmake2/inc/: head1.h
testmake2/libssrc/: CMakeLists.txt
testmake2/libssrc/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
testmake3/: CMakeLists.txt
testmake3/doc/: readme.md
testmake3/src/: main.cpp  utils.cpp
